css/winStyle.css
.applicationShortcut{
    z-index: 0;
    margin: 2%;
    width: 70PX; height: 70PX;
    position: fixed;
    border-radius: 10px;
    margin-right: 15px;
    background-size: cover;
    background-position: center;
    background-color: rgba(171, 171, 171, 0.3);
    background-image: url("../images/levelLogos/LIGHT/icon1.png");
    border-bottom-style: solid;
    border-color: black;
    /* position: relative; */
    cursor: pointer;
}

/* WINDOW STYLING */
.window{
    overflow: hidden;
    z-index: 1;
    width: max(500px, 50%);
    height: 400px;
    border-radius: 5px;
    background-size: cover;
    background-position: top;
    position: absolute;
    background-image: url("../images/levelBackground/clouds.png");
    left: 130%;
}
.window .main_div[scroll="XY"], .window .main_div[scroll="YX"]{
    overflow: scroll;
}
.window .main_div[scroll="Y"]{
    overflow-y: scroll;
}
.window .main_div[scroll="X"]{
    overflow-x: scroll;
}

.window .sizeChanger{
    position: absolute;
    bottom: 0;
    right: 0;
    width: 10px;
    height: 10px;
    z-index: 100;
}

.window .sizeChanger:hover{
    cursor: nwse-resize;
}

.windowHeader{
    position: relative;
    height: 20px;
    background-color: #074c68;
    color: #ffffff;
    font-size: 12px;
    font-weight: bold;
    padding: 5px;
    cursor: move;
    overflow: hidden;
}
.windowHeader .windowTitle{
    margin-left: 5px;
    padding: .5% 0;
}

.windowHeader .windowMaximize{
    position: absolute;
    text-align: center;
    top: 0;
    right: 50px;
    height: 100%;
    width: 50px;
    cursor: pointer;
}
.windowHeader .windowMaximize p, .windowHeader .windowMinimize p, .windowHeader .windowClose p {
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
    line-height: 30px;
}

.windowHeader .windowMinimize{
    position: absolute;
    text-align: center;
    top: 0;
    right: 50px;
    height: 100%;
    width: 50px;
    cursor: pointer;
}

.windowHeader .windowClose{
    position: absolute;
    text-align: center;
    top: 0;
    right: 0;
    height: 100%;
    width: 50px;
    cursor: pointer;
}
.windowHeader .windowClose:hover{
    background-color: #ff0000;
}

#window1 .main_div{
    text-align: left;
}
/* #window2 .main_div{
    overflow: scroll;
} */

.applicationShortcut{
    z-index: 0;
    margin: 2%;
    width: 70PX; height: 70PX;
    position: fixed;
    border-radius: 10px;
    background-size: cover;
    background-position: center;
    background-color: rgba(171, 171, 171, 0.3);
    background-image: url("../images/levelLogos/LIGHT/icon1.png");
    border-bottom-style: solid;
    border-color: black;
}

